<resources>

    <string name="default_notification_channel_id" translatable="false">Hama_delivery</string>
    <string name="app_name">Hama_delivery</string>
    <string name="our">Our Delivery System!</string>
    <string name="Language_Settings4">Sign in to continue</string>
    <string name="email">Delivery Man Serial No</string>
    <string name="Email">Email Address</string>
    <string name="pass">Password</string>
    <string name="Language_Settings5">Forget?</string>Order Tracking
    <string name="login">Login</string>
    <string name="my_order">My Orders</string>
    <string name="Active_Orders">Active Orders</string>
    <string name="Pending_Orders">Pending Orders</string>
    <string name="Returned_Orders">Returned Orders</string>
    <string name="gold_ring">Golden ring, Silver ring, Ring ...</string>
    <string name="Out_for_Delivery">Out for Delivery</string>
    <string name="on_Map">On_Map</string>
    <string name="View_Details">View Details</string>
    <string name="Accept_Order">Accept Order</string>
    <string name="Archived">Archived</string>
    <string name="Before">Before 20 mins</string>
    <string name="Order_Tracking">Order Tracking</string>
    <string name="Vendors_Information">Vendors Information</string>
    <string name="User_Information">User Information</string>
    <string name="TOTAL">TOTAL</string>
    <string name="Jawaher_Store">Jawaher Store</string>
    <string name="Products">xx Products</string>
    <string name="Golden">Golden ring, Silver ring, Ring ...</string>
    <string name="Rejected">Rejected by Vendor</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Store_Address">Store Address</string>
    <string name="lllll">Lorem ipsum dolor sit amet, consetetur</string>
    <string name="Scan">Scan to Receive</string>
    <string name="Store_Name">Store Name</string>
    <string name="Address">Address</string>
    <string name="nnnn">Lorem ipsum, lorem, 20 st</string>
    <string name="Items">Items</string>
    <string name="Bracelet">Bracelet</string>
    <string name="Silver_Ring">Silver Ring</string>
    <string name="Gold_Ring">Gold Ring</string>
    <string name="Delivery_Fees">Delivery Fees</string>
    <string name="Map_View">Map View</string>
    <string name="Profile">My Profile</string>
    <string name="name11">abdelrahman</string>
    <string name="Archived_Orders">"  Archived Orders"</string>
    <string name="Edit_Profile">Edit Profile</string>
    <string name="Personal_Information">Personal Information</string>
    <string name="complint3">abooooooood</string>
    <string name="edit_profile4">27 Aug1996</string>
    <string name="complint7">Your Address</string>
    <string name="Your_Delivery_Cities">Your Delivery Cities</string>
    <string name="find">Kuwait City</string>
    <string name="Al_Jahrā">Al Jahrā</string>
    <string name="submit">Save Changes</string>
    <string name="notifications">Notifications</string>
    <string name="New">New</string>
    <string name="txt_not1">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore</string>
    <string name="All_Notifications">All Notifications</string>
    <string name="cart">Me</string>
    <string name="Home">Home</string>
    <string name="Completed">Completed</string>
    <string name="pending">pending</string>
    <string name="canceled">canceled</string>
    <string name="vendor">Vendors Information</string>
    <string name="user">User Information</string>
    <string name="Scan_Package">Scan Package</string>
    <string name="sscan">Scan to Deliver</string>
    <string name="Language_Settings19">TRACK ON MAP</string>

    <string name="gps_setting_title"> GPS is settings</string>
    <string name="gps_setting_msg"> GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="setting">settings</string>

    <string name="not_login">Your not Login , to continue please Login...</string>
    <string name="change_your_password">Change Your Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="no_orders">No orders</string>
    <string name="user_name">User Name</string>
    <string name="packaging_store">Packaging Store</string>
    <string name="no_packaging_stores">No Packaging Stores</string>

</resources>