<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/transperant">

        <ImageView
            android:id="@+id/imageView_back"
            android:layout_width="25dp"
            android:layout_height="23dp"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            app:srcCompat="@drawable/back" />

        <TextView
            android:id="@+id/txt_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:fontFamily="@font/cairobold"
            android:text="@string/Edit_Profile"
            android:textColor="@color/blackcolor1"
            android:textSize="20dp" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:fontFamily="@font/cairobold"
                android:textSize="18dp"
                android:text="@string/Personal_Information">

            </TextView>


            <ImageView
                android:id="@+id/imageView29"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/persoon" />

            <EditText
                android:id="@+id/editText11"
                android:layout_width="360dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/back_edit_txt"
                android:ems="10"
                android:hint="@string/complint3"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:textSize="14dp" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/text_view11"
                    android:layout_width="360dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:background="@drawable/back_edit_txt"
                    android:ems="10"
                    android:gravity="start"
                    android:hint="@string/edit_profile4"
                    android:inputType="textPersonName"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:textSize="14dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <ImageView
                    android:id="@+id/imageView31"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    app:layout_constraintBottom_toBottomOf="@+id/text_view11"
                    app:layout_constraintEnd_toEndOf="@+id/text_view11"
                    app:layout_constraintHorizontal_bias="0.939"
                    app:layout_constraintStart_toStartOf="@+id/text_view11"
                    app:layout_constraintTop_toTopOf="@+id/text_view11"
                    app:layout_constraintVertical_bias="0.476"
                    app:srcCompat="@drawable/ic_calendar" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/editText151"
                android:layout_width="360dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/back_edit_txt"
                android:ems="10"
                android:hint="@string/complint7"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:textSize="14dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:fontFamily="@font/cairobold"
                android:textSize="18dp"
                android:text="@string/Your_Delivery_Cities">
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:buttonTint="@color/textviewhome"
                    android:text="@string/find" />
                <TextView
                    android:id="@+id/checkBox"
                    android:layout_marginStart="70dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:buttonTint="@color/textviewhome"
                    android:text="@string/Al_Jahrā" />

                <TextView
                    android:id="@+id/checkBox22"
                    android:layout_marginStart="70dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:buttonTint="@color/textviewhome"
                    android:text="@string/Al_Jahrā" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:onClick="sheet"
            android:background="@drawable/back_liner"
            android:gravity="center"
            android:elevation="3dp"
            android:id="@+id/liner_btn"
            android:layout_marginTop="120dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button3"
                android:layout_width="265dp"
                android:layout_height="45dp"
                android:textSize="16dp"
                android:layout_gravity="center"
                android:background="@drawable/back_btn"
                android:textColor="@color/whiteColor"
                android:text="@string/submit" />
        </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>