<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_my_order"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/back_tool">

        <ImageView
            android:id="@+id/back_myorder"
            android:layout_width="25dp"
            android:layout_height="20dp"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            app:srcCompat="@drawable/ic_notification" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:fontFamily="@font/cairobold"
            android:text="@string/my_order"
            android:textColor="@color/blackcolor1"
            android:textSize="25dp" />

        <ImageView
            android:id="@+id/back_myorder1"
            android:layout_width="25dp"
            android:layout_height="20dp"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            app:srcCompat="@drawable/back" />
    </androidx.appcompat.widget.Toolbar>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="20dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="0dp"
    android:clipToPadding="false">
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_my_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabBackground="@drawable/drawable_selector_tab"
        app:tabIndicatorColor="#00ffffff"
        app:tabIndicatorFullWidth="false"
        app:tabSelectedTextColor="@color/blackcolor1"
        app:tabTextColor="@color/color_store_page">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/active_orderr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Active_Orders" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/pending_order_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Pending_Orders" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/cancel_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Returned_Orders" />
    </com.google.android.material.tabs.TabLayout>

</androidx.cardview.widget.CardView>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager_myorder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp" />


</LinearLayout>