<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/liner1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/transparent_color">


    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView55"
                android:layout_width="77dp"
                android:layout_height="96dp"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:background="@drawable/hamalogo" />

            <TextView
                android:id="@+id/well_come"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/cairobold"
                android:gravity="center"
                android:text="@string/our"
                android:textColor="@color/akhdar"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:fontFamily="@font/cairoregular"
                android:gravity="center"
                android:text="@string/Language_Settings4"
                android:textColor="@color/blackcolor"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="360dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:background="@drawable/back_edit_txt"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:textSize="15dp" />



            <RelativeLayout
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center">

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="360dp"
                    android:layout_height="45dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/back_edit_txt"
                    android:drawablePadding="30dp"
                    android:ems="10"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:paddingStart="20dp"
                    android:textAlignment="viewStart"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/edit_password"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="295dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="13dp"
                    android:fontFamily="@font/cairoregular"
                    android:onClick="forgetPassword"
                    android:text="@string/Language_Settings5"
                    android:textColor="@color/textviewhome"
                    android:textSize="13sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="172dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="23dp"
                android:background="@drawable/back_btn"
                android:fontFamily="@font/cairobold"
                android:onClick="signin"
                android:text="@string/login"
                android:gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/whiteColor"
                android:textSize="13sp" />

            <ProgressBar
                android:id="@+id/pb_login"
                android:layout_width="172dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="23dp"
                android:background="@drawable/back_btn"
                android:padding="5dp"
                android:visibility="gone"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>